--- a/experiments/aci-exporter-scrape-config.yaml
+++ b/experiments/aci-exporter-scrape-config.yaml
@@ -13,7 +13,7 @@ spec:
       # DO NOT INSERT SPACES and use \ for next line or aci-exporter will not be able to parse the queries
     queries:
       - "health,fabric_node_info,object_count,max_capacity,\
-        vlans,static_binding_info,dynamic_binding_info,\
+        vlans,static_binding_info,\
         epg_port_vlan_binding,epg_port_vxlan_binding,\
         ps_power_usage,apic_hw_sensors,uptime_topsystem"
   httpSDConfigs:
