--- a/templates/prometheus-configmaps-datasources.yaml
+++ b/templates/prometheus-configmaps-datasources.yaml
@@ -10,7 +10,7 @@ metadata:
 {{- end }}
   labels:
     {{ $.Values.grafana.sidecar.datasources.label }}: {{ $.Values.grafana.sidecar.datasources.labelValue | quote }}
-    app: {{ template "aci-monitoring-stack.name" $ }}-grafana
+    app: {{ .Release.Name }}-grafana
 {{ include "aci-monitoring-stack.labels" $ | indent 4 }}
 data:
   datasource.yaml: |-
