--- a/templates/configmap-aci-exporter-config.yaml
+++ b/templates/configmap-aci-exporter-config.yaml
@@ -11,6 +11,7 @@ data:
     prefix: {{ $.Values.config.prefix }}
     # Profiles for different fabrics
     fabrics:
+      {{- if $.Values.config.fabrics }}
       {{- range $k, $v := $.Values.config.fabrics }}
       {{ $k }}:
         username: {{ $v.username }}
@@ -24,6 +25,7 @@ data:
           target_fields:
             - aci_exporter_fabric
             - {{ $v.service_discovery }}
+      {{- end }}
       {{- end }}
     # Http client settings used to access apic
     httpclient:
