--- a/alerts/loki/interfaces.yaml
+++ b/alerts/loki/interfaces.yaml
@@ -3,28 +3,28 @@ groups:
     rules:
       - alert: Fabric Interface Down
         expr: |
-          sum(count_over_time({job="aci-monitoring-stack"} |= `[F1394]` | regexp `.+phys-\[(?P<interface>[^\]]+)\]/` [1m])) by (name,interface) > 1
+          (sum by (fabric, switch,interface)(count_over_time({job="aci-monitoring-stack"} |= "[F1394]" | regexp ".+phys-\\[(?P<interface>[^\\]]+)\\]/"[1m])) > 1)
         for: 0m
         labels:
           severity: warning
         annotations:
-          summary: Fabric Interface `{{ $labels.interface }}` on node `{{ $labels.name }}` Went Down
+          summary: Fabric Interface `{{ $labels.interface }}` on switch `{{ $labels.switch }}` in Fabric `{{ $labels.fabric }}` Went Down
       - alert: EPG Interface Down
         expr: |
-          sum(count_over_time({job="aci-monitoring-stack"} |= `[F0532]` | regexp `.+phys-\[(?P<interface>[^\]]+)\]/` [1m])) by (name,interface) > 1
+          (sum by (fabric, switch,interface)(count_over_time({job="aci-monitoring-stack"} |= "[F0532]" | regexp ".+phys-\\[(?P<interface>[^\\]]+)\\]/"[1m])) > 1)
         for: 0m
         labels:
           severity: warning
         annotations:
-          summary: EPG Interface `{{ $labels.interface }}` on node `{{ $labels.name }}` Went Down
+          summary: EPG Interface `{{ $labels.interface }}` on switch `{{ $labels.switch }}` in Fabric `{{ $labels.fabric }}` Went Down
       - alert: Interface Up
         expr: |
-          sum(count_over_time({job="aci-monitoring-stack"} |= `[E4205125]` | regexp `.+phys-\[(?P<interface>[^\]]+)\]/` [1m])) by (name,interface) > 1
+          (sum by (fabric, switch,interface)(count_over_time({job="aci-monitoring-stack"} |= "[E4205125]" | regexp ".+phys-\\[(?P<interface>[^\\]]+)\\]/"[1m])) > 1)
         for: 0m
         labels:
           severity: info
         annotations:
-          summary: Interface `{{ $labels.interface }}` on node `{{ $labels.name }}` Went Up
+          summary: Interface `{{ $labels.interface }}` on switch `{{ $labels.switch }}` in Fabric `{{ $labels.fabric }}` Went Up
       - record: interfaces:down:count1m
         expr: |
           sum(
