--- a/templates/aci-exporter-service.yaml
+++ b/templates/aci-exporter-service.yaml
@@ -12,4 +12,4 @@ spec:
       protocol: TCP
       name: http
   selector:
-    {{- include "aci-monitoring-stack.selectorLabels" . | nindent 4 }}
+    app.kubernetes.io/component: {{ $.Release.Name }}-aci-exporter
