--- a/values.yaml
+++ b/values.yaml
@@ -59,6 +59,54 @@ prometheus:
     enabled: true
     service:
       port: 9093
+    templates:
+      alertmanager-webex-template.tmpl: |-
+        {{/* Title of the Webex alert */}}
+        {{ define "webex.default.message" -}}
+        [{{ .Status | toUpper -}}
+        {{ if eq .Status "firing" }}:{{ .Alerts.Firing | len }}{{- end -}}
+        ] {{ .CommonLabels.alertname }}
+        {{ template "Webex.text" . }}
+        {{- end }}
+
+        {{/* Severity of the alert */}}
+        {{ define "__alert_severity" -}}
+            {{- if eq .CommonLabels.severity "critical" -}}
+            *Severity:* `Critical`
+            {{- else if eq .CommonLabels.severity "warning" -}}
+            *Severity:* `Warning`
+            {{- else if eq .CommonLabels.severity "info" -}}
+            *Severity:* `Info`
+            {{- else -}}
+            *Severity:* `undefined` {{ .CommonLabels.severity }}
+            {{- end }}
+        {{- end }}
+
+        {{/* The text to display in the alert */}}
+        {{ define "Webex.text" -}}
+
+            {{ template "__alert_severity" . }}
+            {{- if (index .Alerts 0).Annotations.summary }}
+            {{- "\n" -}}
+            *Summary:* {{ (index .Alerts 0).Annotations.summary }}
+            {{- end }}
+
+            {{ range .Alerts }}
+
+                {{- if .Annotations.description }}
+                {{- "\n" -}}
+                {{ .Annotations.description }}
+                {{- "\n" -}}
+                {{- end }}
+                {{- if .Annotations.message }}
+                {{- "\n" -}}
+                {{ .Annotations.message }}
+                {{- "\n" -}}
+                {{- end }}
+
+            {{- end }}
+        {{- end }}
+
 grafana:
   enabled: true
   defaultDashboardsEnabled: false
