--- a/templates/aci-exporter/deployment.yaml
+++ b/templates/aci-exporter/deployment.yaml
@@ -1,4 +1,4 @@
-{{- $files := .Files.Glob "config.d/*.yaml" }}
+{{- $files := .Files.Glob "../config.d/*.yaml" }}
 apiVersion: apps/v1
 kind: Deployment
 metadata:
@@ -15,7 +15,7 @@ spec:
       labels:
         app.kubernetes.io/component: {{ $.Release.Name }}-aci-exporter
       annotations:
-        checksum/config: {{ include (print $.Template.BasePath "/configmap-aci-exporter-config.yaml") . | sha256sum }}
+        checksum/config: {{ include (print $.Template.BasePath "/aci-exporter/configmap-config.yaml") . | sha256sum }}
         {{- if $files }}
         {{- range $path, $fileContents := $files }}
         {{- $configName := regexReplaceAll "(^.*/)(.*)\\.yaml$" $path "${2}" }}
@@ -24,7 +24,7 @@ spec:
         {{- end }}
     spec:
       containers:
-        - name: {{ .Chart.Name }}
+        - name: aci-exporter
           image: "{{ .Values.image.repository }}:{{ .Values.image.tag | default .Chart.AppVersion }}"
           imagePullPolicy: {{ .Values.image.pullPolicy }}
           ports:
